--- a/ProjectUbuild/Views/Home/Guidelines.cshtml
+++ b/ProjectUbuild/Views/Home/Guidelines.cshtml
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h3>How to Register as New User</h3>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" data-bullet="ti-check-box" style="margin-left:30px">
                     <li>Click on the Log In button</li>
                     <li>Click “register as a new user” </li>
                     <li>Fill the form and click submit</li>
@@ -44,7 +44,7 @@
                 </ul>
 
                 <h3>How to Log-In</h3>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" data-bullet="ti-check-box" style="margin-left:30px">
                     <li>Click on the @Html.ActionLink("Log","Login","Account") In button</li>
                     <li>Enter the email and your password you created during registration</li>
                     <li>Click submit</li>
@@ -56,35 +56,39 @@
                     If you already have your House Designs and Bill of Quantities for your self-build project, you can check
                     how much you are eligible to borrow.
                 </p>
-                <ul class="lead">
-                    <li>
-                        <h4>Full House</h4>
+                <ul>
+                    <li>You will need to choose whether you need funds for a full house or just a phase
+                    
                         <ul class="lead" data-bullet="ti-arrow-right">
-                            <li>You can select the currency in which you want the loan, GHS or USD</li>
-                            <li>You will need to enter your monthly income</li>
-                            <li>Enter your desired loan amount</li>
-                            <li>Choose your desired loan duration</li>
-                            <li>You can choose your desired loan tenure</li>
-                            <li>Click on Check Eligibility</li>
-                            <li>You will be provided with your maximum borrowing capacity and repayment amount</li>
-                            <li>If you are eligible for the amount, click on APPLY NOW</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h4>Phase</h4>
-                        <ul class="lead" data-bullet="ti-arrow-right">
-                            <li>Select the specific house construction phase you need to complete</li>
-                            <li>You can select the currency in which you want the loan, GHS or USD</li>
-                            <li>You will need to enter your monthly income</li>
-                            <li>Enter your desired loan amount</li>
-                            <li>Choose your desired loan duration</li>
-                            <li>You can choose your desired loan tenure</li>
-                            <li>Click on Check Eligibility</li>
-                            <li>You will be provided with your maximum borrowing capacity and repayment amount</li>
-                            <li>If you are eligible for the amount, click on APPLY NOW</li>
+                            <li>Full House
+                                <ul class="lead" style="margin-left:30px" data-bullet="ti-check-box">
+                                    <li>You can select the currency in which you want the loan, GHS or USD</li>
+                                    <li>You will need to enter your monthly income</li>
+                                    <li>Enter your desired loan amount</li>
+                                    <li>Choose your desired loan duration</li>
+                                    <li>You can choose your desired loan tenure</li>
+                                    <li>Click on Check Eligibility</li>
+                                    <li>You will be provided with your maximum borrowing capacity and repayment amount</li>
+                                    <li>If you are eligible for the amount, click on APPLY NOW</li>
+                                </ul>
+                            </li>
+                            <li>Phase
+                                <ul class="lead" style="margin-left:30px" data-bullet="ti-check-box">
+                                    <li>Select the specific house construction phase you need to complete</li>
+                                    <li>You can select the currency in which you want the loan, GHS or USD</li>
+                                    <li>You will need to enter your monthly income</li>
+                                    <li>Enter your desired loan amount</li>
+                                    <li>Choose your desired loan duration</li>
+                                    <li>You can choose your desired loan tenure</li>
+                                    <li>Click on Check Eligibility</li>
+                                    <li>You will be provided with your maximum borrowing capacity and repayment amount</li>
+                                    <li>If you are eligible for the amount, click on APPLY NOW</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                 </ul>
+                
                 </p>
 
 
@@ -92,10 +96,10 @@
 
 
                 <h3>Start Exploring</h3>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" style="margin-left:30px" data-bullet="ti-arrow-right">
                     <li>
                         GHL Bank has provided various house designs for you to choose from :
-                        <ul>
+                        <ul style="margin-left:30px" data-bullet="ti-check-box">
                             <li>1 bedroom expandable to 2 and 3</li>
                             <li>2 bedrooms expandable to 3</li>
                             <li>3 bedrooms</li>
@@ -118,7 +122,7 @@
                     If you are a GHL Bank Account Holder
                 </p>
                 
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" style="margin-left:30px" data-bullet="ti-arrow-right">
                     <li>Kindly enter your account number</li>
                     <li>You will receive an OTP via phone and email to verify your information</li>
                     <li>Enter the token and click verify token</li>
@@ -128,7 +132,7 @@
                 <p>
                     If you are not a GHL Bank Account Holder
                 </p>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" style="margin-left:30px" data-bullet="ti-arrow-right">
                     <li>Fill the form, providing us with information on your personal details, residential information, identification, employment and emergency contact</li>
                     <li>Please ensure you complete all required fields and click on the save and continue button</li>
                 </ul>
@@ -136,7 +140,7 @@
                     Applying for a loan As
                     An existing GHL Bank client
                 </h3>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" style="margin-left:30px" data-bullet="ti-arrow-right">
                     <li>Kindly enter your full name, your account number and customer ID</li>
                     <li>Enter the details for the loan application</li>
                     <li>Click save and submit to send your completed application to GHL Bank for processing</li>
@@ -144,13 +148,13 @@
 
 
                 <h3>New Client</h3>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" style="margin-left:30px" data-bullet="ti-arrow-right">
                     <li>Ensure that you have completed the Profile Registration form</li>
                     <li>Enter the required details on the loan application form.</li>
                     <li>Click save and submit to send your completed application to GHL Bank for processing</li>
                 </ul>
                 <h3>Checking the status of your loan</h3>
-                <ul class="lead" data-bullet="ti-arrow-right">
+                <ul class="lead" style="margin-left:30px" data-bullet="ti-arrow-right">
                     <li>Click on the @Html.ActionLink("My Applications","MyApplications","Home") link</li>
                     <li>Click on pending to see the latest update on your loan application</li>
                 </ul>
