--- a/ProjectUbuild/Views/Loan/LoanDocs.cshtml
+++ b/ProjectUbuild/Views/Loan/LoanDocs.cshtml
@@ -94,7 +94,7 @@
 
                                 <div class="panel panel-default m-t-35">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title">Notes</h3>
+                                        <h3 class="panel-title">Attention</h3>
                                     </div>
                                     <div class="panel-body">
                                         <ul>
