--- a/ProjectUbuild/Views/Home/FaQs.cshtml
+++ b/ProjectUbuild/Views/Home/FaQs.cshtml
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-sm-12">
-
+                <h5 class="text-center alert-danger text-uppercase">About U-build</h5>
                 <div class="card-group horizontal" id="accordion" role="tablist" aria-multiselectable="true">
                     <div class="card card-default m-b-0">
                         <div class="card-header " role="tab" id="headingOne">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <h5 class="text-center alert-danger text-uppercase">Registration and Profile Handling</h5>
                     <div class="card card-default m-b-0">
                         <div class="card-header " role="tab" id="headingFive">
                             <h4 class="card-title">
@@ -198,6 +198,7 @@
                             </div>
                         </div>
                     </div>
+                    <h5 class="text-center alert-danger text-uppercase">Taking a U-BUILD Loan</h5>
                     <div class="card card-default m-b-0">
                         <div class="card-header " role="tab" id="headingTwelve">
                             <h4 class="card-title">
@@ -317,7 +318,7 @@
                             </div>
                         </div>
                     </div>
-                    <h5 style="padding: 5px;text-align: center;color: brown;">U-BUILD MARKET PLACE</h5>
+                    <h5 class="text-center alert-danger text-uppercase">U-BUILD MARKET PLACE</h5>
                     <div class="card card-default m-b-0">
                         <div class="card-header " role="tab" id="headingTwenty">
                             <h4 class="card-title">
@@ -437,7 +438,10 @@
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="alert alert-danger text-uppercase">
+                        <h5 class="text-center text-capitalize">Others</h5>
+                    </div>
+                   
                     <div class="card card-default m-b-0">
                         <div class="card-header " role="tab" id="headingTwentyEight">
                             <h4 class="card-title">
