--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -683,7 +683,7 @@ else
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact Title </label>
-                                                            <select class="form-control" data-ng-model="vm.profile.EmergencyContactTitle2" name="Title" required="">
+                                                            <select class="form-control" data-ng-model="vm.profile.EmergencyContactTitle2" name="EmergencyContactTitle2" required="">
                                                                 <option value="">--Select Title--</option>
                                                                 <option value="Mr">Mr.</option>
                                                                 <option value="Mrs">Mrs.</option>
@@ -696,7 +696,7 @@ else
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact FirstName </label>
-                                                            <input type="text" class="form-control" name="EmergencyContactFirstName"  data-ng-model="vm.profile.EmergencyContactFirstName2">
+                                                            <input type="text" class="form-control" name="EmergencyContactFirstName2"  data-ng-model="vm.profile.EmergencyContactFirstName2">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -706,13 +706,13 @@ else
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact LastName </label>
-                                                            <input type="text" class="form-control" name="EmergencycontactLastName" data-ng-model="vm.profile.EmergencycontactLastName2">
+                                                            <input type="text" class="form-control" name="EmergencycontactLastName2" data-ng-model="vm.profile.EmergencycontactLastName2">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact Phone </label>
-                                                            <input type="text" class="form-control" name="EmergencyContactPhone" data-ng-model="vm.profile.EmergencyContactPhone2">
+                                                            <input type="text" class="form-control" name="EmergencyContactPhone2" data-ng-model="vm.profile.EmergencyContactPhone2">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -722,13 +722,13 @@ else
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default ">
                                                             <label>Emergency Contact Address </label>
-                                                            <input type="text" class="form-control" name="EmergencyContactAddress" data-ng-model="vm.profile.EmergencyContactAddress2">
+                                                            <input type="text" class="form-control" name="EmergencyContactAddress2" data-ng-model="vm.profile.EmergencyContactAddress2">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact Email </label>
-                                                            <input type="text" class="form-control" name="EmergencyContactEmail" data-ng-model="vm.profile.EmergencyContactEmail2">
+                                                            <input type="text" class="form-control" name="EmergencyContactEmail2" data-ng-model="vm.profile.EmergencyContactEmail2">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -738,7 +738,7 @@ else
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact Relationship </label>
-                                                            <input type="text" class="form-control" name="EmergencyContactRship" data-ng-model="vm.profile.EmergencyContactRship2">
+                                                            <input type="text" class="form-control" name="EmergencyContactRship2" data-ng-model="vm.profile.EmergencyContactRship2">
                                                         </div>
                                                     </div>
                                                 </div>
