--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -683,7 +683,7 @@ else
                                                     <div class="col-sm-6">
                                                         <div class="form-group form-group-default">
                                                             <label>Emergency Contact Title </label>
-                                                            <select class="form-control" data-ng-model="vm.profile.EmergencyContactTitle2" name="EmergencyContactTitle2" required="">
+                                                            <select class="form-control" data-ng-model="vm.profile.EmergencyContactTitle2" name="EmergencyContactTitle2">
                                                                 <option value="">--Select Title--</option>
                                                                 <option value="Mr">Mr.</option>
                                                                 <option value="Mrs">Mrs.</option>
@@ -760,12 +760,12 @@ else
                                         </button>
                                     </li>
                                     <li class="next finish hidden" style="display: inline-block!important">
-                                        <button class="btn btn-danger btn-cons   pull-right" type="button">
+                                        <button class="btn btn-danger btn-cons pull-right" type="button">
                                             <span>Finish</span>
                                         </button>
                                     </li>
                                     <li class="previous first hidden">
-                                        <button class="btn btn-default  pull-right" type="button">
+                                        <button class="btn btn-default pull-right" type="button">
                                             <span>First</span>
                                         </button>
                                     </li>
